tests/success/self_assign.bz
import resource;

function main()
{
	(consteval {
		let r = resource_t();
		r = r;
	});
}
