tests/error/comptime_error_reference_variable.bz
function main()
{
	(consteval {
		const i = 0;
		let &r = i;
		r = 3;
	});
}
